BudgetComparisonReport: Fixing scenario selector alignment

--- a/app/reports/budgetComparison/budgetComparisonReport.css
+++ b/app/reports/budgetComparison/budgetComparisonReport.css
@@ -20,10 +20,14 @@
 }
 
 .budget-comparison-report__scenario-selector-tray {
-	width: 100%;
-	display: flex;
-	justify-content: space-between;
-	height: 29px;
-	padding-left: 14%;
-	padding-right: 48%;
+  display: flex;
+  width: 100%;
+  padding: 20px;
+}
+
+.budget-comparison-report__scenario-selector-container {
+  width: 30%;
+  margin-right: 10px;
+  display: flex;
+  justify-content: center;
 }
